Fixed alignment of radio button and label tags

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -205,7 +205,7 @@ content: "! "; }
   margin: 1em;
 }
 
-.button {
+.fake_button {
   background-color: #47C1BF;
   border-radius: 0.354em;
   border: solid thin #00848E;
